--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: omakran <omakran@student.1337.ma>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/26 20:13:14 by omakran           #+#    #+#              #
-#    Updated: 2024/07/26 20:34:21 by omakran          ###   ########.fr        #
+#    Updated: 2024/07/29 01:20:31 by omakran          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,14 +20,12 @@ CXX = c++
 
 OBJ = $(SRC:.cpp=.o)
 
-INCLUDE = -I include
-
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
-%.o: %.cpp
+%.o: %.cpp BitcoinExchange.hpp
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
 clean:
@@ -37,3 +35,5 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
+
+.PHONY: all clean fclean re
